# CPP_course

./: CMakeLists.txt  README.md  all_works.cpp
.github/workflows/: github-actions-demo.yml
Matrix/: CMakeLists.txt  Matrix_operations.cpp  Matrix_operations.h
Set/: CMakeLists.txt  Set.h  Set_definition.hpp  test
linters/: run.sh
project/: CMakeLists.txt  all_works  all_works.c
project/Post_creator/: CMakeLists.txt  Post_creator.c  Post_creator.h
project/func/: CMakeLists.txt  all_functions.c  all_functions.h  constants.h
project/tests/: CMakeLists.txt  test_fib.cpp
tests/: test_Set.cpp  test_matrix.cpp
